# py-ds-academy

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  publish-test.sh  pyproject.toml  sitemap.xml  versions.json
.github/workflows/: build-package.yml  ci.yml  release.yml  test-build-publish.yml
0.5.10/: 404.html  index.html  objects.inv  sitemap.xml
0.5.11/: 404.html  index.html  sitemap.xml
0.5.12/: 404.html  index.html  objects.inv  sitemap.xml
0.5.13/: 404.html  index.html  sitemap.xml
0.5.14/: 404.html  index.html
0.5.15/: 404.html  index.html  sitemap.xml
0.5.16/: 404.html  index.html  sitemap.xml
0.5.17/: 404.html  index.html  objects.inv  sitemap.xml
0.5.18/: 404.html  index.html  sitemap.xml
0.5.19/: 404.html  index.html  objects.inv  sitemap.xml
0.5.4/: 404.html  index.html  sitemap.xml
0.5.5/: 404.html  index.html  sitemap.xml
0.5.6/: 404.html  index.html  sitemap.xml
0.5.7/: 404.html  index.html  objects.inv  sitemap.xml
0.5.8/: 404.html  index.html  objects.inv  sitemap.xml
0.5.9/: 404.html  index.html  objects.inv  sitemap.xml
contributing/: index.html
docs/: contributing.md  index.md  structures.md
scratches/: main.py
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
structures/: index.html
tests/: test_avl_tree.py  test_binary_search_tree.py  test_doubly_linked_list.py  test_linked_list.py  test_max_heap.py  test_min_heap.py  test_queue.py  test_stack.py
v0.5.13/: 404.html  index.html  sitemap.xml
(+450 files in other folders)
