[project]
name = "py-ds-eytan"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
py-ds = "py_ds:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "py_ds"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
