[project]
name = "py-ds-eytan"
version = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv.build-backend]
module-name = "py_ds"

[tool.hatch.build.targets.wheel]
packages = ["src/py_ds"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
